# gw

./: .gitignore  CMakeLists.txt  README.md  build_windows.sh
benchmark/: benchmark.cpp  benchmark.h
dll/: DivideProcDll.cpp
include/core/: GmlStorage.h  Object.h  types.h
include/exceptions/: Exceptions.h
include/io/: GmlCreate.h  GmlExport.h  GmlImport.h
include/logic/: GmlDivide.h  GmlMerge.h  GmlServices.h
include/release/: static_config.h
include/services/: Config.h  XmlConfig.h  XmlParser.h  XsdConfig.h  XsdParser.h  ZipSaver.h
include/utils/: NamespaceTool.h  string_operations.h  tree_operations.h
resources/: config.json
src/: main.cpp
src/core/: GmlStorage.cpp  Object.cpp
src/io/: GmlCreate.cpp  GmlExport.cpp  GmlImport.cpp
src/logic/: GmlDivide.cpp  GmlMerge.cpp  GmlServices.cpp
src/release/: divide.cpp  divide_benchmark.cpp  divide_main.cpp  import_benchmark.cpp  main.cpp  merge_benchmark.cpp  merge_main.cpp  parse_xsd_benchmark.cpp
src/services/: XmlConfig.cpp  XmlParser.cpp  XsdConfig.cpp  XsdParser.cpp  ZipSaver.cpp
src/utils/: NamespaceTool.cpp  string_operations.cpp  tree_operations.cpp
tests/: CMakeLists.txt  basic_test.cpp
